; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_power_supply.c__gb_power_supply_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/greybus/extr_power_supply.c__gb_power_supply_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gb_power_supply = type { i32, i64, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gb_power_supply*)* @_gb_power_supply_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_gb_power_supply_release(%struct.gb_power_supply* %0) #0 {
  %2 = alloca %struct.gb_power_supply*, align 8
  store %struct.gb_power_supply* %0, %struct.gb_power_supply** %2, align 8
  %3 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %4 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %3, i32 0, i32 3
  store i64 0, i64* %4, align 8
  %5 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %6 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %5, i32 0, i32 2
  %7 = call i32 @cancel_delayed_work_sync(i32* %6)
  %8 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %9 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %14 = getelementptr inbounds %struct.gb_power_supply, %struct.gb_power_supply* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @power_supply_unregister(i32 %15)
  br label %17

17:                                               ; preds = %12, %1
  %18 = load %struct.gb_power_supply*, %struct.gb_power_supply** %2, align 8
  %19 = call i32 @_gb_power_supply_free(%struct.gb_power_supply* %18)
  ret void
}

declare dso_local i32 @cancel_delayed_work_sync(i32*) #1

declare dso_local i32 @power_supply_unregister(i32) #1

declare dso_local i32 @_gb_power_supply_free(%struct.gb_power_supply*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
